# modelcar-maker

./: .dockerignore  .gitignore  AGENTS.md  Containerfile  README.md  build.sh  models.txt  pyproject.toml  tox.ini
.agents/skills/dev-workflows/: SKILL.md
.github/workflows/: build-push-main.yml  chart.yml  chart_versions.sh  publish-chart.yml  release.yml
charts/modelcar-maker/: Chart.yaml  example-external-registry.yaml  values.yaml
charts/modelcar-maker/templates/: NOTES.txt  _helpers.tpl  authfile.yaml  configmap-service-ca.yaml  configmap.yaml  daemonset-image-puller.yaml  datascienceconnection.yaml  imagestream.yaml  job.yaml  pvc.yaml  rbac.yaml  secret.yaml  serviceaccount.yaml
models/baai--bge-large-en-v1_5/: Containerfile
models/baai--bge-m3/: Containerfile
models/ibm-granite--granite-3_2-8b-instruct/: Containerfile
models/ibm-granite--granite-3_3-8b-instruct/: Containerfile
models/ibm-granite--granite-4_0-h-micro/: Containerfile
models/ibm-granite--granite-4_0-h-small/: Containerfile
models/ibm-granite--granite-4_0-h-tiny/: Containerfile
models/ibm-granite--granite-4_0-micro/: Containerfile
models/ibm-granite--granite-4_0-tiny-preview/: Containerfile
models/ibm-granite--granite-8b-code-instruct-128k/: Containerfile
models/intfloat--multilingual-e5-large/: Containerfile
models/intfloat--multilingual-e5-large-instruct/: Containerfile
models/meta-llama--llama-3_1-8b-instruct/: Containerfile
models/meta-llama--llama-3_2-3b-instruct/: Containerfile
models/meta-llama--llama-3_3-70b-instruct/: Containerfile
models/mistralai--mistral-small-3_1-24b-instruct-2503/: Containerfile
models/nvidia--llama-3_1-nemotron-safety-guard-8b-v3/: Containerfile
models/nvidia--nvidia-nemotron-nano-9b-v2/: Containerfile
models/openmeditron--meditron3-phi4-14b/: Containerfile
models/qwen--qwen3-14b/: Containerfile
models/qwen--qwen3-14b-fp8/: Containerfile
models/qwen--qwen3-30b-a3b-instruct-2507/: Containerfile
models/qwen--qwen3-30b-a3b-instruct-2507-fp8/: Containerfile
models/qwen--qwen3-30b-a3b-thinking-2507/: Containerfile
models/qwen--qwen3-30b-a3b-thinking-2507-fp8/: Containerfile
models/qwen--qwen3-4b-instruct-2507/: Containerfile
models/qwen--qwen3-8b/: Containerfile
models/qwen--qwen3-8b-fp8/: Containerfile
models/redhatai--gpt-oss-120b/: Containerfile
models/redhatai--gpt-oss-20b/: Containerfile
models/redhatai--granite-3_1-8b-instruct-fp8-dynamic/: Containerfile
models/redhatai--granite-3_1-8b-instruct-quantized_w8a8/: Containerfile
models/redhatai--llama-3_1-8b-instruct-speculator_eagle3/: Containerfile
models/redhatai--llama-3_2-3b-instruct-fp8/: Containerfile
models/redhatai--llama-3_2-3b-instruct-quantized_w8a8/: Containerfile
models/redhatai--llama-3_3-70b-instruct-quantized_w4a16/: Containerfile
models/redhatai--llama-3_3-70b-instruct-speculator_eagle3/: Containerfile
models/redhatai--llama-4-scout-17b-16e-instruct-quantized_w4a16/: Containerfile
models/redhatai--ministral-3-14b-instruct-2512/: Containerfile
models/redhatai--mistral-small-3_1-24b-instruct-2503-fp8-dynamic/: Containerfile
models/redhatai--nvidia-nemotron-3-nano-30b-a3b-fp8/: Containerfile
models/redhatai--nvidia-nemotron-nano-9b-v2-fp8-dynamic/: Containerfile
models/redhatai--qwen3-14b-speculator_eagle3/: Containerfile
models/redhatai--qwen3-30b-a3b-instruct-2507_w4a16/: Containerfile
models/redhatai--qwen3-32b-speculator_eagle3/: Containerfile
models/redhatai--qwen3-8b-speculator_eagle3/: Containerfile
models/redhatai--qwen3-next-80b-a3b-instruct-quantized_w4a16/: Containerfile
models/redhatai--voxtral-mini-3b-2507-fp8-dynamic/: Containerfile
src/modelcar_maker/: __init__.py
src/modelcar_maker/cli/: cli.py
src/modelcar_maker/download/: __init__.py  hf_download.py
src/modelcar_maker/image/: __init__.py  common.py  image.py  olot.py  podman.py  template.py  types.py
src/modelcar_maker/model/: model.py
src/modelcar_maker/templates/: Containerfile.j2
src/modelcar_maker/util/: __init__.py  config.py  defaults.toml  helpers.py  logging.py
tests/: conftest.py
tests/integration/: test_build_real.py  test_cli.py
tests/unit/: test_download.py  test_helpers.py  test_image_olot.py  test_image_podman.py  test_image_template.py  test_process.py
