[project]
name = "modelcar-maker"
dynamic = ["version"]
requires-python = ">=3.11"
authors = [{ name = "James Harmison", email = "jharmison@redhat.com" }]
description = """\
A tool to build modelcar images with layers per file\
"""
license = "ISC"
license-files = ["LICENSE"]
readme = "README.md"
classifiers = ["Operating System :: POSIX :: Linux"]
dependencies = [
  "dynaconf >=3.2.13,<3.3.0",
  "typer >=0.25.1,<0.26.0",
  "huggingface-hub >=1.17.0,<1.18.0",
  "olot[oras-py] >=0.1.17,<0.2.0",
]

[project.optional-dependencies]
dev = ["tox", "pytest"]
podman = ["Jinja2 >=3.1.6,<3.2"]

[project.urls]
Source = "https://github.com/jharmison-redhat/modelcar-maker"
Documentation = "https://github.com/jharmison-redhat/modelcar-maker"

[project.scripts]
modelcar-maker = "modelcar_maker.cli:cli"

[tool.setuptools.package-data]
modelcar_maker = ["defaults.toml", "Containerfile.j2"]

[tool.setuptools_scm]
write_to = "src/modelcar_maker/__version__.py"

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = false
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
force_single_line = true
line_length = 120
src_paths = ["src", "tests"]

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with -m 'not slow')"]

[tool.pyright]
venvPath = "."
venv = ".venv"
